import org.jetbrains.kotlin.gradle.tasks.KotlinCompile
import com.vanniktech.maven.publish.AndroidSingleVariantLibrary
import com.vanniktech.maven.publish.SonatypeHost

plugins {
    id 'java-library'
    id 'kotlin'
    id 'kotlin-kapt'
    id 'maven-publish'
    id 'signing'
    id "com.vanniktech.maven.publish" version "0.32.0"
}

repositories {
    mavenCentral()
}

dependencies {
    implementation "org.mapstruct:mapstruct:${mapstructVersion}"
    implementation "org.mapstruct:mapstruct-processor:${mapstructVersion}"
    implementation "org.jetbrains.kotlin:kotlin-stdlib"
    implementation "org.jetbrains.kotlinx:kotlinx-metadata-jvm:${kotlinxMetadataVersion}"
    implementation "com.google.auto.service:auto-service:${autoServiceVersion}"
    implementation "com.squareup:javapoet:${javaPoetVersion}"

    implementation project(':mapstruct-kotlin-builder')

    kapt "com.google.auto.service:auto-service:${autoServiceVersion}"

    testImplementation 'org.mockito:mockito-core:2.28.2'
    testImplementation 'junit:junit:4.13.2' // Updated JUnit version
}

java {
    toolchain {
        languageVersion.set(JavaLanguageVersion.of(17)) // Updated to match your Java version
    }
}

tasks.register("sourcesJar", Jar) {
    dependsOn classes
    archiveClassifier.set("sources")
    from sourceSets.main.allSource
}

tasks.register("javadocJar", Jar) {
    dependsOn javadoc
    archiveClassifier.set("javadoc")
    from javadoc.destinationDir
}

mavenPublishing {
    publishToMavenCentral(SonatypeHost.CENTRAL_PORTAL)
    signAllPublications()

    coordinates(group, "mapstruct-kotlin-processor", version)

    pom {
        name = "mapstruct-kotlin-processor"
        description = "KotlinBuilder annotation processor plugin for MapStruct"
        url = "https://github.com/Dhanfinix/mapstruct-kotlin"

        licenses {
            license {
                name = "MIT License"
                url = "https://opensource.org/licenses/MIT"
            }
        }
        developers {
            developer {
                id = "dhanfinix"
                name = "Ramdhan"
                email = "muhammadramdhan541@gmail.com"
            }
        }
        scm {
            url = "https://github.com/Dhanfinix/mapstruct-kotlin"
            connection = "scm:git:git://github.com/Dhanfinix/mapstruct-kotlin.git"
            developerConnection = "scm:git:ssh://github.com:Dhanfinix/mapstruct-kotlin.git"
        }
    }
}
//publishing {
//    publications {
//        maven(MavenPublication) {
//            artifactId = "mapstruct-kotlin-processor"
//
//            from(components["java"])
//            artifact(tasks.named("sourcesJar").get())
//            artifact(tasks.named("javadocJar").get())
//
//            pom {
//                name = "mapstruct-kotlin-processor"
//                description = "Fork of KotlinBuilder annotation processor for MapStruct"
//                url = "https://github.com/Dhanfinix/mapstruct-kotlin"
//
//                licenses {
//                    license {
//                        name = "MIT License"
//                        url = "https://opensource.org/licenses/MIT"
//                    }
//                }
//                developers {
//                    developer {
//                        id = "dhanfinix"
//                        name = "Ramdhan"
//                        email = "muhammadramdhan541@gmail.com"
//                    }
//                }
//                scm {
//                    url = "https://github.com/Dhanfinix/mapstruct-kotlin"
//                    connection = "scm:git:git://github.com/Dhanfinix/mapstruct-kotlin.git"
//                    developerConnection = "scm:git:ssh://github.com:Dhanfinix/mapstruct-kotlin.git"
//                }
//            }
//        }
//    }
//    repositories {
//        maven {
//            url "https://oss.sonatype.org/service/local/staging/deploy/maven2/"
//            credentials {
//                username = findProperty("credential_name")
//                password = findProperty("credential_pass")
//            }
//        }
//    }
//}

//signing {
////    useGpgCmd()
//    useInMemoryPgpKeys(
//        findProperty("signing.keyId") as String,
//        findProperty("signing.secretKey") as String,
//        findProperty("signing.password") as String
//    )
//    sign publishing.publications.maven
//}
signing {
    useInMemoryPgpKeys(
            findProperty("signing.keyId") as String,
            findProperty("signing.secretKey") as String,
            findProperty("signing.password") as String
    )
    sign(publishing.publications)
}


tasks.withType(KotlinCompile).configureEach {
    kotlinOptions.jvmTarget = "17"
}
